Added UI elements for navigating within the enlarged renderer.
Added a Go menu with following items:
    + Previous Photo
    + Next Photo
    + First Photo
    + Last Photo

Previous and Next have been added to the toolbar as well.

Signed-off-by: Santanu Sinha <santanu@powerbook.(none)>

--- a/data/solang.ui
+++ b/data/solang.ui
@@ -17,12 +17,15 @@
 		</menu>
 		<placeholder name="PlaceholderViewMenus"/>
 		<placeholder name="PlaceholderFindMenus"/>
+		<placeholder name="PlaceholderGoMenus"/>
 		<placeholder name="PlaceHolderTagMenus"/>
 		<menu action="ActionHelpMenu"/>
 	</menubar>
 	<toolbar name="ToolBar">
 		<placeholder name="PlaceholderImportToolBar"/>
 		<placeholder name="PlaceholderExportToolBar"/>
+		<separator/>
+		<placeholder name="PlaceholderGoToolBar"/>
 		<separator/>
 		<toolitem action="ActionViewFullScreen"/>
 	</toolbar>
