--- a/data/solang-enlarged-renderer.ui
+++ b/data/solang-enlarged-renderer.ui
@@ -1,6 +1,11 @@
 <!--*- xml -*-->
 <ui>
 	<menubar name="MenuBar">
+		<menu action="ActionViewMenu">
+			<placeholder name="PlaceholderToolMenus">
+			<menuitem action="ActionViewReload"/>
+			</placeholder>
+		</menu>
 		<placeholder name="PlaceholderGoMenus">
 		<menu action="ActionMenuGo">
 			<menuitem action="ActionGoPrevious"/>
