Use accelerators instead of responding to imageView_->signal_key_press_event.
The signal is only emitted when the widget is in focus. Accelerators
do not have this limitation. Therefore they are a better choice for
enlarged renderer's navigation hot keys.

--- a/data/solang-enlarged-renderer.ui
+++ b/data/solang-enlarged-renderer.ui
@@ -22,4 +22,8 @@
 		<toolitem action="ActionGoNext"/>
 		</placeholder>
 	</toolbar>
+	<accelerator action="AccelGoPrevious"/>
+	<accelerator action="AccelGoNext"/>
+	<accelerator action="AccelGoFirst"/>
+	<accelerator action="AccelGoLast"/>
 </ui>
