Added UI elements for zooming within the enlarged renderer.
Added a new placeholder within the View menu with the following items:
    + Zoom In
    + Zoom Out
    + Normal Size
    + Best Fit

All four of them have been added to the toolbar; as well as
accelerators and mouse scrolling for the first two.

--- a/data/solang-enlarged-renderer.ui
+++ b/data/solang-enlarged-renderer.ui
@@ -2,6 +2,12 @@
 <ui>
 	<menubar name="MenuBar">
 		<menu action="ActionViewMenu">
+			<placeholder name="PlaceholderZoomMenus">
+			<menuitem action="ActionViewZoomIn"/>
+			<menuitem action="ActionViewZoomOut"/>
+			<menuitem action="ActionViewNormalSize"/>
+			<menuitem action="ActionViewBestFit"/>
+			</placeholder>
 			<placeholder name="PlaceholderToolMenus">
 			<menuitem action="ActionViewReload"/>
 			</placeholder>
@@ -21,9 +27,20 @@
 		<toolitem action="ActionGoPrevious"/>
 		<toolitem action="ActionGoNext"/>
 		</placeholder>
+		<placeholder name="PlaceholderZoomToolBar">
+		<toolitem action="ActionViewZoomIn"/>
+		<toolitem action="ActionViewZoomOut"/>
+		<toolitem action="ActionViewNormalSize"/>
+		<toolitem action="ActionViewBestFit"/>
+		</placeholder>
 	</toolbar>
 	<accelerator action="AccelGoPrevious"/>
 	<accelerator action="AccelGoNext"/>
 	<accelerator action="AccelGoFirst"/>
 	<accelerator action="AccelGoLast"/>
+	<accelerator action="AccelViewZoomIn"/>
+	<accelerator action="AccelViewZoomIn1"/>
+	<accelerator action="AccelViewZoomIn2"/>
+	<accelerator action="AccelViewZoomOut"/>
+	<accelerator action="AccelViewZoomOut1"/>
 </ui>
