--- a/data/solang-editor-renderer.ui
+++ b/data/solang-editor-renderer.ui
@@ -14,18 +14,18 @@
 		</menu>
 		<placeholder name="PlaceholderGoMenus">
 		<menu action="ActionMenuGo">
-			<menuitem action="ActionGoPrevious"/>
-			<menuitem action="ActionGoNext"/>
-			<separator name="GoSeparator"/>
-			<menuitem action="ActionGoFirst"/>
-			<menuitem action="ActionGoLast"/>
+			<menuitem action="ActionGoPreviousEditablePhoto"/>
+			<menuitem action="ActionGoNextEditablePhoto"/>
+			<separator name="GoEditorSeparator"/>
+			<menuitem action="ActionGoFirstEditablePhoto"/>
+			<menuitem action="ActionGoLastEditablePhoto"/>
 		</menu>
 		</placeholder>
 	</menubar>
 	<toolbar name="ToolBar">
 		<placeholder name="PlaceholderGoToolBar">
-		<toolitem action="ActionGoPrevious"/>
-		<toolitem action="ActionGoNext"/>
+		<toolitem action="ActionGoPreviousEditablePhoto"/>
+		<toolitem action="ActionGoNextEditablePhoto"/>
 		</placeholder>
 		<placeholder name="PlaceholderZoomToolBar">
 		<toolitem action="ActionViewZoomIn"/>
@@ -34,10 +34,10 @@
 		<toolitem action="ActionViewBestFit"/>
 		</placeholder>
 	</toolbar>
-	<accelerator action="AccelGoPrevious"/>
-	<accelerator action="AccelGoNext"/>
-	<accelerator action="AccelGoFirst"/>
-	<accelerator action="AccelGoLast"/>
+	<accelerator action="AccelGoPreviousEditablePhoto"/>
+	<accelerator action="AccelGoNextEditablePhoto"/>
+	<accelerator action="AccelGoFirstEditablePhoto"/>
+	<accelerator action="AccelGoLastEditablePhoto"/>
 	<accelerator action="AccelViewZoomIn"/>
 	<accelerator action="AccelViewZoomIn1"/>
 	<accelerator action="AccelViewZoomIn2"/>
