Basic slideshowing support.
+ A new SlideshowRenderer is used to renderer the photos within a
  separate SlideshowWindow.
+ Slideshows can be started from the browser and editor renderers.
+ New icons from Eye of GNOME.

--- a/data/solang-browser-renderer.ui
+++ b/data/solang-browser-renderer.ui
@@ -2,6 +2,9 @@
 <ui>
 	<menubar name="MenuBar">
 		<menu action="ActionViewMenu">
+			<placeholder name="PlaceholderFullScreenMenus">
+			<menuitem action="ActionViewBrowserSlideshow"/>
+			</placeholder>
 			<placeholder name="PlaceholderZoomMenus">
 			<menuitem action="ActionViewZoomIn"/>
 			<menuitem action="ActionViewZoomOut"/>
@@ -21,6 +24,9 @@
 	<toolbar name="ToolBar">
 		<placeholder name="PlaceholderGoToolBar">
 		<toolitem action="ActionViewEdit"/>
+		</placeholder>
+		<placeholder name="PlaceholderFullScreenToolBar">
+		<toolitem action="ActionViewBrowserSlideshow"/>
 		</placeholder>
 	</toolbar>
 </ui>
