--- a/data/solang.ui
+++ b/data/solang.ui
@@ -14,6 +14,7 @@
 			<menuitem action="ActionViewStatusBar"/>
 			<separator name="ViewSeparator0"/>
 			<menuitem action="ActionViewFullScreen"/>
+			<placeholder name="PlaceholderFullScreenMenus"/>
 			<separator name="ViewSeparator1"/>
 			<placeholder name="PlaceholderZoomMenus"/>
 			<separator name="ViewSeparator2"/>
@@ -37,5 +38,6 @@
 		<placeholder name="PlaceholderZoomToolBar"/>
 		<separator name="ToolBarSeparator2"/>
 		<toolitem action="ActionViewFullScreen"/>
+		<placeholder name="PlaceholderFullScreenToolBar"/>
 	</toolbar>
 </ui>
