Exporter infrastructure and a basic directory exporter.
It is not possible to edit the export queue right now. This will be
fixed later.

--- a/data/solang-browser-renderer-thumbnail.ui
+++ b/data/solang-browser-renderer-thumbnail.ui
@@ -2,6 +2,7 @@
 <ui>
 	<popup name="ThumbnailPopup">
 		<placeholder name="PlaceholderEditPopup">
+		<menuitem action="ActionEditAddToExportQueue"/>
 		<menuitem action="ActionViewEdit"/>
 		</placeholder>
 		<placeholder name="PlaceholderFullScreenPopup">
