Modifications in editing infrastructure
This patch introduces GEGL to Solang. That is the primal
infrastrutural change. Others are just supportive changes.
Some operations have been added as proof of concept.
 + Introduction of GEGL based editing engine
 + Introduction of editing toolbar
 + Introduction of histogram in properties and editing
 + Introduction of cursor changer
 + Added the following editing operation:
    Scaling (Pixbuf based)
    Brightness (Gegl based)
    Contrast (Gegl based)
    Saturation (Pixbuf based)
 + Removed menu items that will not be used anymore

--- a/data/solang-editor.ui
+++ b/data/solang-editor.ui
@@ -6,6 +6,7 @@
 			<menuitem action="ActionEditUndo"/>
 			<menuitem action="ActionEditRedo"/>
 			</placeholder>
+			<!--
 			<placeholder name="PlaceholderFlipMenus">
 			<menuitem action="ActionEditFlipHorizontal"/>
 			<menuitem action="ActionEditFlipVertical"/>
@@ -17,10 +18,20 @@
 			<placeholder name="PlaceholderScaleMenus">
 			<menuitem action="ActionEditScale"/>
 			</placeholder>
+			-->
 			<placeholder name="PlaceholderOtherEditMenus">
 			<menuitem action="ActionEditSaveAs"/>
 			</placeholder>
 		</menu>
 	</menubar>
+	<toolbar name="ToolBar">
+		<placeholder name="PlaceHolderEditToolbar">
+			<separator name="EditSeparator0"/>
+			<toolitem action="ActionEditSaveAs"/>
+			<separator name="EditSeparator1"/>
+			<toolitem action="ActionEditUndo"/>
+			<toolitem action="ActionEditRedo"/>
+		</placeholder>
+	</toolbar>
 </ui>
 
