Carried out some housekeeping.
+ Removed unused Gtk::UIManager toolbar -- "ToolBarEdit".
+ Renamed "PlaceHolderEditToolbar" to "PlaceholderEditToolBar".
+ Removed corresponding dead code.

--- a/data/solang-editor.ui
+++ b/data/solang-editor.ui
@@ -12,7 +12,7 @@
 		</menu>
 	</menubar>
 	<toolbar name="ToolBar">
-		<placeholder name="PlaceHolderEditToolbar">
+		<placeholder name="PlaceholderEditToolBar">
 			<separator name="EditSeparator0"/>
 			<toolitem action="ActionEditSaveAs"/>
 			<separator name="EditSeparator1"/>
