Support for copy/paste of edit actions.
An user will be able to copy a set of applied actions from one photo
and paste it onto others.

--- a/data/solang-editor.ui
+++ b/data/solang-editor.ui
@@ -6,6 +6,10 @@
 			<menuitem action="ActionEditUndo"/>
 			<menuitem action="ActionEditRedo"/>
 			</placeholder>
+			<placeholder name="PlaceholderCopyPasteHistory">
+			<menuitem action="ActionCopyHistory"/>
+			<menuitem action="ActionPasteHistory"/>
+			</placeholder>
 			<placeholder name="PlaceholderOtherEditMenus">
 			<menuitem action="ActionEditSaveAs"/>
 			</placeholder>
@@ -16,6 +20,9 @@
 			<separator name="EditSeparator0"/>
 			<toolitem action="ActionEditSaveAs"/>
 			<separator name="EditSeparator1"/>
+			<toolitem action="ActionCopyHistory"/>
+			<toolitem action="ActionPasteHistory"/>
+			<separator name="EditSeparator2"/>
 			<toolitem action="ActionEditUndo"/>
 			<toolitem action="ActionEditRedo"/>
 		</placeholder>
