Added an expanded toolbar separator to solang.ui
Previously we were appending a widget created separately in
MainWindow. It is better to be consistent and use Gtk::UIManager.

--- a/data/solang.ui
+++ b/data/solang.ui
@@ -52,5 +52,6 @@
 		<separator name="ToolBarSeparator3"/>
 		<toolitem action="ActionViewFullScreen"/>
 		<placeholder name="PlaceholderFullScreenToolBar"/>
+		<separator name="ToolBarSeparatorN" expand="true"/>
 	</toolbar>
 </ui>
