Namespace the Gtk::Actions provided by the renderers

--- a/data/solang-browser-renderer.ui
+++ b/data/solang-browser-renderer.ui
@@ -6,17 +6,17 @@
 			<menuitem action="ActionViewBrowserSlideshow"/>
 			</placeholder>
 			<placeholder name="PlaceholderZoomMenus">
-			<menuitem action="ActionViewZoomIn"/>
-			<menuitem action="ActionViewZoomOut"/>
+			<menuitem action="ActionViewBrowserZoomIn"/>
+			<menuitem action="ActionViewBrowserZoomOut"/>
 			</placeholder>
 		</menu>
 		<placeholder name="PlaceholderGoMenus">
-		<menu action="ActionMenuGo">
-			<menuitem action="ActionGoPreviousPage"/>
-			<menuitem action="ActionGoNextPage"/>
+		<menu action="ActionBrowserGoMenu">
+			<menuitem action="ActionGoBrowserPreviousPage"/>
+			<menuitem action="ActionGoBrowserNextPage"/>
 			<separator name="GoBrowserSeparator"/>
-			<menuitem action="ActionGoFirstPage"/>
-			<menuitem action="ActionGoLastPage"/>
+			<menuitem action="ActionGoBrowserFirstPage"/>
+			<menuitem action="ActionGoBrowserLastPage"/>
 		</menu>
 		</placeholder>
 	</menubar>
@@ -25,7 +25,7 @@
 		<toolitem action="ActionViewBrowserSlideshow"/>
 		</placeholder>
 		<placeholder name="PlaceholderMiscToolBar">
-		<toolitem action="ActionViewZoom"/>
+		<toolitem action="ActionViewBrowserZoom"/>
 		</placeholder>
 	</toolbar>
 </ui>
