Use solang-slideshow.ui to set the properties of ToolBarSeparator1

--- a/data/solang-slideshow.ui
+++ b/data/solang-slideshow.ui
@@ -7,7 +7,7 @@
 		<toolitem action="ActionViewSlideshowZoomOut"/>
 		<toolitem action="ActionViewSlideshowNormalSize"/>
 		<toolitem action="ActionViewSlideshowBestFit"/>
-		<separator name="ToolBarSeparator1"/>
+		<separator name="ToolBarSeparator1" draw="false" expand="true"/>
 		<placeholder name="PlaceholderFullScreenToolBar"/>
 	</toolbar>
 	<accelerator action="AccelViewSlideshowZoomIn"/>
