Reorganized the search module
+ Renamed SearchBasket as SearchManager.
+ Split out the Gtk::TreeView as a separate widget named SearchBasket.

--- a/data/solang-search-basket.ui
+++ b/data/solang-search-basket.ui
@@ -1,7 +1,6 @@
 <!--*- xml -*-->
 <ui>
 	<popup name="SearchBasketPopup">
-		<menuitem action="ActionSelectAll"/>
-		<menuitem action="ActionRemoveSelected"/>
+		<placeholder name="PlaceholderSearchBasketPopup" />
 	</popup>
 </ui>
