--- a/docs/en_GB/export_folder.page
+++ b/docs/en_GB/export_folder.page
@@ -4,14 +4,39 @@
 <info>
 	<link type="guide" xref="index_export"/>
 	<desc>
-	To export some photos in a archive or a folder.
+	To export photos in a archive or a folder.
 	</desc>
 </info>
 <title>Export to Folder</title>
-<p>You can export some photos you have chosen to a folder of your computer.</p>
+<p>You can export photos to a directory of your computer.</p>
 
-<p>First you need to add the photos you want to export to the export
+<p>First you have to add the photos you want to export to the export queue.</p>
 <steps>
+	<item>
+	<p>Select one or more photos you want to export.</p>
+	</item>
+	<item>
+	<p>Choose <guiseq><gui>Edit</gui><gui>Add to Export Queue</gui></guiseq>.</p>
+	</item>
+	<item>
+	<p>You can change the page and do the steps again until you have added all the photos you want to the Export Queue.</p>
+	</item>
+</steps>
 
+<p>Now you have to export your Export Queue to a folder.</p>
+<steps>
+	<item>
+	<p>Choose <guiseq><gui>Photos</gui><gui>Export to</gui><gui>Folder...</gui></guiseq>.</p>
+	</item>
+	<item>
+	<p>From the <gui>Export</gui> window, choose the directory you want your photos to be exported to.</p>
+	</item>
+	<item>
+	<p>Check <gui>Create an archive</gui> if you want your photos to be packed up in a compressed archive. It can be useful if you want to send the photos by e-mail. The archive will be named with the current date following the pattern "yyyymmdd.zip" and saved in the directory you have chosen.
+	Otherwise your photos will be copied directly to the directory you have chosen.</p>
+	</item>
+	<item>
+	<p>Choose <gui>Export</gui> to export the photos.</p>
+	</item>
 </steps>
 </page>
