--- a/docs/C/photos_by_page.page
+++ b/docs/C/photos_by_page.page
@@ -2,7 +2,7 @@
       type="topic"
       id="photos_by_page">
 <info>
-	<link type="guide" xref="index_UI"/>
+	<link type="guide" xref="index_questions"/>
 	<desc>
 	To view more than 50 photos.
 	</desc>
