--- a/docs/C/tags_manage.page
+++ b/docs/C/tags_manage.page
@@ -7,7 +7,7 @@
 	Create, delete and attach tags to photos.
 	</desc>
 </info>
-<title>Use tags</title>
+<title>How do I use tags ?</title>
 
 <section id="create_tag" style="task">
   <title>Create a tag</title>
