help: Corrected typos in C
Signed-off-by: Debarshi Ray <rishi@gnu.org>

--- a/docs/C/index.page
+++ b/docs/C/index.page
@@ -5,7 +5,7 @@
 
   <note style="tip">
     <p>
-      This guide is created for <app>Solang</app>'s 0.4 series. Since there has been some UI regressions from the 0.3 series, this guide may not cover some features of <app>Solang</app> 0.3.
+      This guide is created for <app>Solang</app>'s 0.4 series. Since there have been some UI regressions from the 0.3 series, this guide may not cover some features of <app>Solang</app> 0.3.
     </p>
   </note>
 
